<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_meeting_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Titre de la réunion"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_meeting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Nom de la réunion"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_begin_time_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_name_title" />

    <TextView
        android:id="@+id/add_meeting_begin_time_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Début de la réunion :"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_date_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_name" />

    <Button
        android:id="@+id/add_meeting_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="01/01/22"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_duration_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_meeting_hour_button"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_begin_time_title" />

    <Button
        android:id="@+id/add_meeting_hour_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="10h30"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_duration_title"
        app:layout_constraintLeft_toRightOf="@id/add_meeting_date_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_begin_time_title" />

    <TextView
        android:id="@+id/add_meeting_duration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Heure de fin :"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_endTime_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_date_button" />

    <Button
        android:id="@+id/add_meeting_endTime_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10 : 30"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_room_spinner_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_duration_title" />

    <TextView
        android:id="@+id/add_meeting_room_spinner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:text="Choisiez votre salle"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_room_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_hour_button" />

    <Spinner
        android:id="@+id/add_meeting_room_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:prompt="@string/meeting_add_spinner_prompt"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_participant_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_room_spinner_title" />

    <TextView
        android:id="@+id/add_meeting_participant_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Participants :"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_room_spinner" />

    <Button
        android:id="@+id/add_meeting_participant_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Liste des participants"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_title" />

    <EditText
        android:id="@+id/add_meeting_participant_add_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_meeting_participant_add_button"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_list_button" />

    <Button
        android:id="@+id/add_meeting_participant_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Ajout"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/add_meeting_participant_add_EditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_list_button" />

    <Button
        android:id="@+id/add_meeting_valid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:text="Ajouter"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>