<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meeting_list.MeetingListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meetings"
        android:name="com.exemple.mareu.ui.meeting_list.ListMeetingActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.meeting_list.ListMeetingActivity"
        tools:listitem="@layout/item_list_meeting" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/meeting_list_add_button"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/meeting_list_add_button"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>