<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_menu"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filter_by_date"
                android:title="@string/by_date" />
            <item
                android:id="@+id/filter_by_room"
                android:title="@string/by_room" />
        </menu>
    </item>

</menu>